[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Timer.gd" type="Script" id=2]
[ext_resource path="res://MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://objects/ProjectileSpawner.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2000.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1060, 50 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 590 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 910, 490 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Arena" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena"]
shape = SubResource( 1 )

[node name="Background" type="Sprite" parent="."]

[node name="Borders" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Borders"]
position = Vector2( 0, -590 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/TopWall"]
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="Borders"]
position = Vector2( 0, 590 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/BottomWall"]
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="Borders"]
position = Vector2( -1010, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/LeftWall"]
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="Borders"]
position = Vector2( 1010, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/RightWall"]
shape = SubResource( 3 )

[node name="BallGroups" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Timer" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_right = 192.0
margin_bottom = 217.0
theme = ExtResource( 3 )
text = "00:00"
align = 1
valign = 1
script = ExtResource( 2 )

[node name="ProjectileSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( -870, 1175 )

[node name="ProjectileWarningBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileWarningBox"]
shape = SubResource( 4 )

[connection signal="body_exited" from="Arena" to="." method="_on_Arena_body_exited"]
[connection signal="body_entered" from="ProjectileWarningBox" to="." method="_on_ProjectileWarningBox_body_entered"]
